update license on published pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 </div>
 
 <footer>
-  <p><a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US"><img alt="Creative Commons License" width="88" height="31" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a></p>
+  <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" width="88" height="31" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a></p>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
