fill in speech class

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -38,7 +38,6 @@
           <li id="name-component"><a href="/specs/person/name-component.html">Name Component</a></li>
         </ul>
       </li>
-      <li id="area"><a href="/specs/area.html">Area</a></li>
       <li id="voting" class="dropdown">
         <a href="/specs/vote-event.html" class="dropdown-toggle" data-toggle="dropdown" data-target="#">
           Motions and voting <b class="caret"></b>
@@ -50,6 +49,8 @@
           <li id="vote"><a href="/specs/vote.html">Vote</a></li>
         </ul>
       </li>
+      <li id="area"><a href="/specs/area.html">Area</a></li>
+      <li id="speech"><a href="/specs/speech.html">Speech</a></li>
       <li id="appendices" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           Appendices <b class="caret"></b>
