--- a/css/style.css
+++ b/css/style.css
@@ -138,9 +138,6 @@ blockquote {
 .post-page #post a,
 .post-page #post a:hover,
 .post-page #post a:focus,
-.area-page #area a,
-.area-page #area a:hover,
-.area-page #area a:focus,
 .motion-page #motion a,
 .motion-page #motion a:hover,
 .motion-page #motion a:focus,
@@ -153,6 +150,12 @@ blockquote {
 .vote-page #vote a,
 .vote-page #vote a:hover,
 .vote-page #vote a:focus,
+.area-page #area a,
+.area-page #area a:hover,
+.area-page #area a:focus,
+.speech-page #speech a,
+.speech-page #speech a:hover,
+.speech-page #speech a:focus,
 .appendix-page #appendices>a,
 .appendix-page #appendices>a:hover,
 .appendix-page #appendices>a:focus {
