--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -34,8 +34,8 @@
           <li id="organization"><a href="/specs/organization.html">Organization</a></li>
           <li id="membership"><a href="/specs/membership.html">Membership</a></li>
           <li id="post"><a href="/specs/post.html">Post</a></li>
-          <li id="contact-detail"><a href="/specs/contact-detail.html">Contact Detail</a></li>
-          <li id="name-component"><a href="/specs/person/name-component.html">Name Component</a></li>
+          <li id="contact-detail"><a href="/specs/contact-detail.html">Contact detail</a></li>
+          <li id="name-component"><a href="/specs/person/name-component.html">Name component</a></li>
         </ul>
       </li>
       <li id="voting" class="dropdown">
@@ -44,7 +44,7 @@
         </a>
         <ul class="dropdown-menu">
           <li id="motion"><a href="/specs/motion.html">Motion</a></li>
-          <li id="vote-event"><a href="/specs/vote-event.html">Vote Event</a></li>
+          <li id="vote-event"><a href="/specs/vote-event.html">Vote event</a></li>
           <li id="count"><a href="/specs/count.html">Count</a></li>
           <li id="vote"><a href="/specs/vote.html">Vote</a></li>
         </ul>
