--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ em.rfc2119 {
   padding: 0 0 10px;
   margin-top: 30px;
   margin-bottom: 10px;
+  background-color: #eeeeee;
 }
 #adoption img,
 #reuse img {
