--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -43,7 +43,7 @@
           Appendices <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
-          <li><a href="/appendices/examples.html">Examples JSON documents</a></li>
+          <li><a href="/appendices/examples.html">Example JSON documents</a></li>
           <li><a href="/appendices/multilingualization.html">Multilingualization</a></li>
           <li><a href="/appendices/handling-duplicates.html">Handling duplicates</a></li>
           <li role="presentation" class="divider"></li>
