add event class, closes #22

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -38,8 +38,8 @@
           <li id="name-component"><a href="/specs/person/name-component.html">Name component</a></li>
         </ul>
       </li>
-      <li id="voting" class="dropdown">
-        <a href="/specs/vote-event.html" class="dropdown-toggle" data-toggle="dropdown" data-target="#">
+      <li id="motions-and-voting" class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-target="#">
           Motions and voting <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
@@ -49,8 +49,16 @@
           <li id="vote"><a href="/specs/vote.html">Vote</a></li>
         </ul>
       </li>
-      <li id="area"><a href="/specs/area.html">Area</a></li>
-      <li id="speech"><a href="/specs/speech.html">Speech</a></li>
+      <li id="other-classes" class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-target="#">
+          Other classes <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li id="area"><a href="/specs/area.html">Area</a></li>
+          <li id="event"><a href="/specs/event.html">Event</a></li>
+          <li id="speech"><a href="/specs/speech.html">Speech</a></li>
+        </ul>
+      </li>
       <li id="appendices" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           Appendices <b class="caret"></b>
