--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,9 @@ blockquote {
 .area-page #area a,
 .area-page #area a:hover,
 .area-page #area a:focus,
+.event-page #event a,
+.event-page #event a:hover,
+.event-page #event a:focus,
 .speech-page #speech a,
 .speech-page #speech a:hover,
 .speech-page #speech a:focus,
