--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,13 +30,13 @@
 <script src="/js/highlight.pack.js"></script>
 <script src="/js/scripts.js"></script>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QRHRDCHPR7"></script>
 <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-60189591-1', 'auto');
-ga('send', 'pageview');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QRHRDCHPR7');
 </script>
 </body>
 </html>
